--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .container {
@@ -20,6 +21,9 @@ body {
   width: 100%;
   height: 10%;
   background-color: #06335f;
+  display: flex;
+  justify-content: space-between;
+  color: white;
 }
 
 .content {
@@ -32,6 +36,10 @@ body {
   animation-duration: 0.75s;
   transition-timing-function: ease-in;
   animation-fill-mode: both;
+}
+
+.info {
+  display: flex;
 }
 
 .down-info {
