--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ body {
   height: 100vh;
   width: 100vw;
   font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.1rem;
+  font-size: larger;
 }
 
 .container {
@@ -15,6 +17,7 @@ body {
   height: 650px;
   background-color: #202753;
   border-radius: 1%;
+  
 }
 
 .top-info {
@@ -23,6 +26,7 @@ body {
   background-color: #06335f;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: white;
 }
 
@@ -40,9 +44,18 @@ body {
 
 .info {
   display: flex;
+  align-items: center;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 40%;
+}
+
+.info > *:not(:first-child) {
+  margin-left: 10%;
 }
 
 .down-info {
+  display: flex;
   width: 100%;
   height: 10%;
   background-color: aquamarine;
@@ -73,6 +86,29 @@ body {
 
 .down {
   height: 46%;
+}
+
+.opacity-letters {
+  opacity: 0.5;
+  font-size: 0.9rem;
+}
+
+.air-conditioner {
+  width: 17.5%;
+  height: 100%;
+  background-color: bisque;
+}
+
+.navbar {
+  width: 65%;
+  height: 100%;
+  background-color: aliceblue;
+}
+
+.heated-seats {
+  width: 17.5%;
+  height: 100%;
+  background-color: black;
 }
 
 
