--- a/css/main.css
+++ b/css/main.css
@@ -15,19 +15,19 @@ body {
 .container {
   width: 1000px;
   height: 650px;
-  background-color: #202753;
+  background-image: linear-gradient(to top, #13335c, #1d2d57, #242651, #2a1f4b, #2f1843);
   border-radius: 1%;
-  
 }
 
 .top-info {
   width: 100%;
   height: 10%;
-  background-color: #06335f;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
+  border-top: solid 1px;
+  border-color: #2f184386;
 }
 
 .content {
@@ -36,7 +36,6 @@ body {
   align-items: center;
   width: 100%;
   height: 80%;
-  background-color: aliceblue;
   animation-duration: 0.75s;
   transition-timing-function: ease-in;
   animation-fill-mode: both;
@@ -50,7 +49,7 @@ body {
   width: 40%;
 }
 
-.info > *:not(:first-child) {
+.info>*:not(:first-child) {
   margin-left: 10%;
 }
 
@@ -58,12 +57,18 @@ body {
   display: flex;
   width: 100%;
   height: 10%;
-  background-color: aquamarine;
+  border-top: solid 1px;
+  border-color: #2f184344;
+
 }
 
 .box {
-  background-color: wheat;
-  border-radius: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2.5%;
+  background-color: #01042A;
+
 }
 
 .left {
@@ -71,13 +76,12 @@ body {
   height: 85%;
 }
 
-.right{
+.right {
   width: 42.5%;
   height: 85%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
 }
 
 .up {
@@ -96,29 +100,39 @@ body {
 .air-conditioner {
   width: 17.5%;
   height: 100%;
-  background-color: bisque;
 }
 
 .navbar {
   width: 65%;
   height: 100%;
-  background-color: aliceblue;
 }
 
 .heated-seats {
   width: 17.5%;
   height: 100%;
-  background-color: black;
 }
 
+.music-controls {
+  height: 45%;
+  opacity: 0.05;
+  border-radius: 2.5%;
+  background-color: white;
+}
 
+.v-line {
+  border-left: 2px solid rgba(255, 255, 255, 0.452);
+  height: 75%;
+}
+
+.air-box {
+  
+}
 
 /*
 
 * Animations
 
 */
-
 
 .fadeinright {
   animation-name: fadeInRight;
