--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.1rem;
   font-size: larger;
+  color: white;
+  cursor: url('../img/touch-cursor-64.png'), auto;
 }
 
 .container {
@@ -21,11 +23,10 @@ body {
 
 .top-info {
   width: 100%;
-  height: 10%;
+  height: 12.5%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: white;
   border-top: solid 1px;
   border-color: #2f184386;
 }
@@ -33,9 +34,8 @@ body {
 .content {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
   width: 100%;
-  height: 80%;
+  height: 75%;
   animation-duration: 0.75s;
   transition-timing-function: ease-in;
   animation-fill-mode: both;
@@ -55,11 +55,9 @@ body {
 
 .down-info {
   display: flex;
+  align-items: center;
   width: 100%;
-  height: 10%;
-  border-top: solid 1px;
-  border-color: #2f184344;
-
+  height: 12.5%;
 }
 
 .box {
@@ -68,17 +66,16 @@ body {
   align-items: center;
   border-radius: 2.5%;
   background-color: #01042A;
-
 }
 
 .left {
   width: 42.5%;
-  height: 85%;
+  height: 95%;
 }
 
 .right {
   width: 42.5%;
-  height: 85%;
+  height: 95%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -90,6 +87,8 @@ body {
 
 .down {
   height: 46%;
+  display: flex;
+  flex-direction: column;
 }
 
 .opacity-letters {
@@ -100,14 +99,24 @@ body {
 .air-conditioner {
   width: 17.5%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   width: 65%;
   height: 100%;
 }
 
 .heated-seats {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   width: 17.5%;
   height: 100%;
 }
@@ -125,7 +134,60 @@ body {
 }
 
 .air-box {
-  
+  width: 85%;
+  height: 70%;
+  border: solid;
+  border-radius: 7.5%;
+  border-color: white;
+  border-width: 2px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.weather {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 75%;
+}
+
+.weather-info {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  font-size: small;
+}
+
+.app-name {
+  font-size: 0.5rem;
+  margin: 0;
+  margin-top: 8px;
+  font-weight: 200;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.menu {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.little-weather {
+  font-size: 0.5rem;
+  margin: 0;
+  margin-top: 2px;
+  font-weight: 200;
+}
+
+.big-weather {
+  margin:0;
+  font-weight: bold;
 }
 
 /*
