--- a/css/main.css
+++ b/css/main.css
@@ -122,10 +122,21 @@ body {
 }
 
 .music-controls {
-  height: 45%;
-  opacity: 0.05;
-  border-radius: 2.5%;
-  background-color: white;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to left, rgba(1, 4, 42, 1), rgba(1, 4, 42, 0.1));
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.music {
+  background-image: url("../img/music/radio/rfm.png");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 50% 100%;
+  height: 95%;
+  width: 95%;
 }
 
 .v-line {
@@ -173,9 +184,9 @@ body {
 }
 
 .menu {
-display: flex;
-flex-direction: column;
-align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .little-weather {
@@ -186,7 +197,7 @@ align-items: center;
 }
 
 .big-weather {
-  margin:0;
+  margin: 0;
   font-weight: bold;
 }
 
