--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,12 @@ body {
   letter-spacing: 0.1rem;
   font-size: larger;
   color: white;
-  cursor: url('../img/touch-cursor-64.png'), auto;
+  cursor: url('../img/touch-cursor-64.png'), auto !important;
 }
 
 .container {
-  width: 1000px;
-  height: 650px;
+  width: 1200px;
+  height: 780px;
   background-image: linear-gradient(to top, #13335c, #1d2d57, #242651, #2a1f4b, #2f1843);
   border-radius: 1%;
 }
@@ -27,8 +27,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-top: solid 1px;
-  border-color: #2f184386;
 }
 
 .content {
@@ -36,8 +34,9 @@ body {
   justify-content: space-evenly;
   width: 100%;
   height: 75%;
-  animation-duration: 0.75s;
-  transition-timing-function: ease-in;
+  animation: fadeIn;
+  animation-duration: 1.5s;
+  transition-timing-function: ease-out;
   animation-fill-mode: both;
 }
 
@@ -145,10 +144,10 @@ body {
 }
 
 .air-box {
-  width: 85%;
-  height: 70%;
+  width: 80%;
+  height: 60%;
   border: solid;
-  border-radius: 7.5%;
+  border-radius: 20%/ 50%;
   border-color: white;
   border-width: 2px;
   display: flex;
@@ -187,6 +186,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: auto;
+}
+
+a:hover, a:visited, a:link, a:active {
+  text-decoration: none;
+  color: white;
+  cursor: url('../img/touch-cursor-64.png'), auto;
 }
 
 .little-weather {
@@ -203,10 +209,35 @@ body {
 
 .air-modal {
   display: none;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   z-index: 2;
   border-radius: 2.5%;
   background-color: rgba(1, 4, 42, 0.95);
+}
+
+.air-flex {
+  display: flex;
+  flex-direction: column;
+  height: 95%;
+  width: 95%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.air-button {
+  background-color: rgba(255, 255, 255, 0.95);
+  width: 30%;
+  height: 100%;
+  border-radius: 15% / 50%;
+}
+
+.air-mini-button {
+  border-radius: 50%;
+  width: 10%;
+  height: 20%;
+  background-color: rgba(255, 255, 255, 0.95);
 }
 
 /*
@@ -229,6 +260,10 @@ body {
 
 .fadeoutright {
   animation-name: fadeOutRight;
+}
+
+.fadeout {
+  animation: fadeIn 3s ease-out reverse both;
 }
 
 /* 
