--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body {
   justify-content: space-evenly;
   width: 100%;
   height: 75%;
-  animation: fadeIn;
+  /*animation: fadeIn;*/
   animation-duration: 1.5s;
   transition-timing-function: ease-out;
   animation-fill-mode: both;
@@ -238,6 +238,15 @@ a:hover, a:visited, a:link, a:active {
   width: 10%;
   height: 20%;
   background-color: rgba(255, 255, 255, 0.95);
+}
+
+.transition-fade {
+  transition: 4s;
+  opacity: 1;
+}
+
+html.is-animating .transition-fade {
+  opacity: 0;
 }
 
 /*
