--- a/css/main.css
+++ b/css/main.css
@@ -333,3 +333,43 @@ html.is-animating .transition-fade {
     transform: translate3d(-100%, 0, 0);
   }
 }
+
+.button {
+  background-color: slateblue;
+  width: 16.4%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto';
+  font-size: 3.7vw;
+  font-weight: bold;
+  color: white;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 19.55%;
+}
+
+.letterpad {
+  border-radius: 5%;
+  background-color: lightgray;
+  height: 75%;
+  display: flex; 
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.iconbar{
+  height: 20%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.recent{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
