--- a/css/main.css
+++ b/css/main.css
@@ -320,6 +320,11 @@ html.is-animating .transition-fade {
   box-shadow: 0px 0px 30px 5px rgba(255, 255, 255, 0.5);
 }
 
+#mslider{
+  width: 100%;
+  height: 15px;
+}
+
 /* 
 
 * Keyframes
