--- a/css/phone.css
+++ b/css/phone.css
@@ -34,7 +34,8 @@
 
 .recent{
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
