--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,7 @@ a:hover, a:visited, a:link, a:active {
   z-index: 2;
   border-radius: 2.5%;
   background-color: rgba(1, 4, 42, 0.95);
+  color: white;
 }
 
 .settings-modal {
@@ -245,12 +246,11 @@ a:hover, a:visited, a:link, a:active {
 }
 
 .air-button {
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: #1B224C;
   width: 30%;
   height: 100%;
   border-radius: 15% / 50%;
   text-transform: uppercase;
-  color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -260,7 +260,8 @@ a:hover, a:visited, a:link, a:active {
   border-radius: 50%;
   width: 10%;
   height: 19%;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: #1B224C;
+  color:white
 }
 
 .air-mini-button-mini {
@@ -271,10 +272,12 @@ a:hover, a:visited, a:link, a:active {
   font-size: xx-large;
   width: 35%;
   height: 90%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: #F2F3F4;
+  color:black
 }
 
 .air-mini-button-mini-mini {
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -282,7 +285,7 @@ a:hover, a:visited, a:link, a:active {
   font-size: xx-large;
   width: 32.5%;
   height: 95%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: #F2F3F4
 }
 
 .slider {
