--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ body {
 
 .settings-box {
   width: 80%;
-  height: 10%;
+  height: 16%;
   border: solid;
   border-radius: 20%/ 50%;
   border-color: white;
@@ -161,6 +161,11 @@ body {
   justify-content: space-evenly;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.05);
+}
+
+.settings-modal input {
+  border-radius: 25%/ 60%;
+  text-align: center;
 }
 
 
@@ -529,4 +534,14 @@ html.is-animating .transition-fade {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+
+@media only screen 
+and (max-device-width : 780px) 
+and (max-device-width : 1200px) 
+ {
+  .container{
+    width: 1000px;
+    height: 650px;
+  }
 }
