--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -154,6 +155,20 @@ body {
   width: 80%;
   height: 16%;
   border: solid;
+  border-radius: 20%/ 50%;
+  border-color: white;
+  border-width: 2px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.bluetooth-box {
+  width: 40%;
+  height: 100%;
+  border: solid;
+  font-size: small;
   border-radius: 20%/ 50%;
   border-color: white;
   border-width: 2px;
@@ -536,9 +551,9 @@ html.is-animating .transition-fade {
   justify-content: space-evenly;
 }
 
-@media only screen 
-and (max-device-height : 800px) 
-and (max-device-width : 1400px) 
+@media screen 
+and (max-height : 800px), screen 
+and (max-width : 1400px) 
  {
   .container{
     width: 1000px;
