--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,6 @@ body {
   text-align: center;
 }
 
-
 .air-box {
   width: 80%;
   height: 60%;
@@ -332,6 +331,12 @@ a:hover, a:visited, a:link, a:active {
 .slider {
   width: 100%;
   height: 100%;
+  -webkit-appearance: slider-vertical;
+}
+
+.sliderdoors {
+  width: 30%;
+  height: 50%;
   -webkit-appearance: slider-vertical;
 }
 
@@ -551,11 +556,8 @@ html.is-animating .transition-fade {
   justify-content: space-evenly;
 }
 
-@media screen 
-and (max-height : 800px), screen 
-and (max-width : 1400px) 
- {
-  .container{
+@media screen and (max-height: 800px), screen and (max-width: 1400px) {
+  .container {
     width: 1000px;
     height: 650px;
   }
