--- a/css/main.css
+++ b/css/main.css
@@ -354,8 +354,16 @@ html.is-animating .transition-fade {
   opacity: 0;
 }
 
-.range-controls{
+.range-controls {
   font-size: x-large;
+}
+
+#pesquisam {
+  border-radius: 9999em;
+  text-align: center;
+  height: 25px;
+  width: 200px;
+  outline: none;
 }
 
 /*
@@ -566,4 +574,3 @@ html.is-animating .transition-fade {
     height: 650px;
   }
 }
-
