alguns testes no phone e maps

--- a/css/phone.css
+++ b/css/phone.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: slateblue;
+  background-color: #141448;
   width: 16.4%;
   display: flex;
   justify-content: center;
