--- a/css/main.css
+++ b/css/main.css
@@ -545,7 +545,7 @@ html.is-animating .transition-fade {
 }
 
 .button {
-  background-color: slateblue;
+  background-color: #141448;
   width: 16.4%;
   display: flex;
   justify-content: center;
