--- a/css/phone.css
+++ b/css/phone.css
@@ -8,6 +8,7 @@
   font-size: 3.7vw;
   font-weight: bold;
   color: white;
+  
 }
 
 .row {
@@ -90,13 +91,10 @@
 
 .num
 {
-    -webkit-border-radius: 999px;
-    border-radius: 999px;
-    -moz-border-radius: 999px;
-    height: 80px;
+    border-radius: 50%;
+    height: 70px;
     background-color: #224397;
     color: #fff;
-    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -114,7 +112,6 @@
 {
     font-size: 30px;
     text-align: center;
-    margin-top: 15px;
     font-family: 'Lato' , sans-serif;
     line-height: 30px;
     color: #fff;
@@ -159,4 +156,12 @@
 .active
 {
     color: #3498db;
+}
+
+#call{
+    filter: brightness(0.9);
+}
+
+#call:hover{
+    filter: brightness(1);
 }
